Fixed overflow bug on playlist page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,19 +142,6 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: #8c8c8c;
   }
-  
-
-  @media(min-width: 640px) {
-    .playlist-header {
-      width: calc(100vw - 300px);
-    }
-  }
-
-  @media(min-width: 768px) {
-    .playlist-header {
-      width: calc(100vw - 600px);
-    }
-  }
 
   input[type=range] {
     height: 18px;
